--- a/4.RecurrentNeuralNetwork/language-translation/dlnd_language_translation.ipynb
+++ b/4.RecurrentNeuralNetwork/language-translation/dlnd_language_translation.ipynb
@@ -14,9 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/01014477/local/anaconda3/envs/py3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: compiletime version 3.5 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.6\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -40,9 +49,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset Stats\n",
+      "Roughly the number of unique words: 227\n",
+      "Number of sentences: 137861\n",
+      "Average number of words in a sentence: 13.225277634719028\n",
+      "\n",
+      "English sentences 0 to 10:\n",
+      "new jersey is sometimes quiet during autumn , and it is snowy in april .\n",
+      "the united states is usually chilly during july , and it is usually freezing in november .\n",
+      "california is usually quiet during march , and it is usually hot in june .\n",
+      "the united states is sometimes mild during june , and it is cold in september .\n",
+      "your least liked fruit is the grape , but my least liked is the apple .\n",
+      "his favorite fruit is the orange , but my favorite is the grape .\n",
+      "paris is relaxing during december , but it is usually chilly in july .\n",
+      "new jersey is busy during spring , and it is never hot in march .\n",
+      "our least liked fruit is the lemon , but my least liked is the grape .\n",
+      "the united states is sometimes busy during january , and it is sometimes warm in november .\n",
+      "\n",
+      "French sentences 0 to 10:\n",
+      "new jersey est parfois calme pendant l' automne , et il est neigeux en avril .\n",
+      "les états-unis est généralement froid en juillet , et il gèle habituellement en novembre .\n",
+      "california est généralement calme en mars , et il est généralement chaud en juin .\n",
+      "les états-unis est parfois légère en juin , et il fait froid en septembre .\n",
+      "votre moins aimé fruit est le raisin , mais mon moins aimé est la pomme .\n",
+      "son fruit préféré est l'orange , mais mon préféré est le raisin .\n",
+      "paris est relaxant en décembre , mais il est généralement froid en juillet .\n",
+      "new jersey est occupé au printemps , et il est jamais chaude en mars .\n",
+      "notre fruit est moins aimé le citron , mais mon moins aimé est le raisin .\n",
+      "les états-unis est parfois occupé en janvier , et il est parfois chaud en novembre .\n"
+     ]
+    }
+   ],
    "source": [
     "view_sentence_range = (0, 10)\n",
     "\n",
@@ -84,9 +128,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def text_to_ids(source_text, target_text, source_vocab_to_int, target_vocab_to_int):\n",
     "    \"\"\"\n",
@@ -99,7 +151,19 @@
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
     "    \n",
-    "    return None, None\n",
+    "    source_id_text = []\n",
+    "    target_id_text = []\n",
+    "    \n",
+    "    for source, target in zip(source_text.split('\\n'), target_text.split('\\n')):\n",
+    "        source_id = [source_vocab_to_int[word] for word in source.split()]\n",
+    "        target_id = [target_vocab_to_int[word] for word in target.split()]\n",
+    "        target_id.append(target_vocab_to_int['<EOS>'])\n",
+    "        \n",
+    "        source_id_text.append(source_id)\n",
+    "        target_id_text.append(target_id)\n",
+    "        \n",
+    "    \n",
+    "    return source_id_text, target_id_text\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -117,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,9 +201,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/01014477/local/anaconda3/envs/py3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: compiletime version 3.5 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.6\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -161,9 +234,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TensorFlow Version: 1.4.1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/01014477/local/anaconda3/envs/py3/lib/python3.6/site-packages/ipykernel_launcher.py:15: UserWarning: No GPU found. Please use a GPU to train your neural network.\n",
+      "  from ipykernel import kernelapp as app\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -214,9 +303,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def model_inputs():\n",
     "    \"\"\"\n",
@@ -225,7 +322,16 @@
     "    max target sequence length, source sequence length)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None, None, None, None, None, None\n",
+    "    input_ = tf.placeholder(dtype=tf.int32, shape=[None, None], name='input')\n",
+    "    target_ = tf.placeholder(dtype=tf.int32, shape=[None, None], name='target')\n",
+    "    learning_rate = tf.placeholder(dtype=tf.float32, name='learning_rate')\n",
+    "    keep_prob = tf.placeholder(dtype=tf.float32, name='keep_prob')\n",
+    "    target_sequence_length = tf.placeholder(dtype=tf.int32, shape=[None], name='target_sequence_length')\n",
+    "    max_target_len = tf.reduce_max(target_sequence_length, name='max_target_len')\n",
+    "    source_sequence_length = tf.placeholder(dtype=tf.int32, shape=[None], name='source_sequence_length')\n",
+    "    \n",
+    "    \n",
+    "    return input_, target_, learning_rate, keep_prob, target_sequence_length, max_target_len, source_sequence_length\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -244,9 +350,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def process_decoder_input(target_data, target_vocab_to_int, batch_size):\n",
     "    \"\"\"\n",
@@ -257,7 +371,10 @@
     "    :return: Preprocessed target data\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    ending = tf.strided_slice(target_data, [0,0], [batch_size, -1], [1, 1])\n",
+    "    dec_input = tf.concat([tf.fill([batch_size, 1], target_vocab_to_int['<GO>']), ending], 1)\n",
+    "\n",
+    "    return dec_input\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -278,11 +395,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "from imp import reload\n",
     "reload(tests)\n",
@@ -302,7 +427,19 @@
     "    :return: tuple (RNN output, RNN state)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    embed = tf.contrib.layers.embed_sequence(rnn_inputs, source_vocab_size, encoding_embedding_size)\n",
+    "    \n",
+    "    def lstm_cell():\n",
+    "        lstm = tf.contrib.rnn.LSTMCell(rnn_size, initializer=tf.random_uniform_initializer(-0.1, 0.1, seed=2))\n",
+    "        return lstm\n",
+    "    \n",
+    "    cell = tf.contrib.rnn.MultiRNNCell([lstm_cell() for _ in range(num_layers)])\n",
+    "\n",
+    "    drop = tf.contrib.rnn.DropoutWrapper(cell, keep_prob)\n",
+    "    \n",
+    "    output, state = tf.nn.dynamic_rnn(drop, embed, sequence_length=source_sequence_length, dtype=tf.float32)\n",
+    "\n",
+    "    return output, state\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -323,9 +460,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "def decoding_layer_train(encoder_state, dec_cell, dec_embed_input, \n",
@@ -343,8 +488,14 @@
     "    :return: BasicDecoderOutput containing training logits and sample_id\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    \n",
+    "    training_helper = tf.contrib.seq2seq.TrainingHelper(dec_embed_input, target_sequence_length)\n",
     "\n",
+    "    training_decoder = tf.contrib.seq2seq.BasicDecoder(dec_cell, training_helper, encoder_state, output_layer)\n",
+    "\n",
+    "    dec_train_outputs, _, _ = tf.contrib.seq2seq.dynamic_decode(training_decoder, impute_finished=True, maximum_iterations = max_summary_length)\n",
+    "\n",
+    "    return dec_train_outputs\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -366,11 +517,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def decoding_layer_infer(encoder_state, dec_cell, dec_embeddings, start_of_sequence_id,\n",
     "                         end_of_sequence_id, max_target_sequence_length,\n",
@@ -391,8 +550,15 @@
     "    :return: BasicDecoderOutput containing inference logits and sample_id\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    tokens = tf.tile(tf.constant([start_of_sequence_id], dtype=tf.int32), [batch_size], name=\"tokens\")\n",
     "\n",
+    "    helper = tf.contrib.seq2seq.GreedyEmbeddingHelper(dec_embeddings, tokens, end_of_sequence_id)\n",
+    "\n",
+    "    decoder = tf.contrib.seq2seq.BasicDecoder(dec_cell, helper, encoder_state, output_layer)\n",
+    "\n",
+    "    output, _, _ = tf.contrib.seq2seq.dynamic_decode(decoder, impute_finished = True, maximum_iterations = max_target_sequence_length)\n",
+    "\n",
+    "    return output\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -419,9 +585,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def decoding_layer(dec_input, encoder_state,\n",
     "                   target_sequence_length, max_target_sequence_length,\n",
@@ -444,8 +618,41 @@
     "    :return: Tuple of (Training BasicDecoderOutput, Inference BasicDecoderOutput)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
-    "\n",
+    "    \n",
+    "    # Embed the target sequences\n",
+    "    dec_embeddings = tf.Variable(tf.random_normal([target_vocab_size, decoding_embedding_size], stddev=0.1))\n",
+    "    dec_embed_input = tf.nn.embedding_lookup(dec_embeddings, dec_input)\n",
+    "    \n",
+    "    \n",
+    "    # Construct the decoder LSTM cell (just like we constructed the encoder cell above)\n",
+    "    def make_cell(rnn_size):\n",
+    "        dec_cell = tf.contrib.rnn.LSTMCell(rnn_size,\n",
+    "                                           initializer=tf.random_uniform_initializer(-0.1, 0.1, seed=2))\n",
+    "        return dec_cell\n",
+    "    \n",
+    "    dec_cell = tf.contrib.rnn.MultiRNNCell([make_cell(rnn_size) for _ in range(num_layers)])\n",
+    "    \n",
+    "    # Create an output layer to map the outputs of the decoder to the elements of our vocabulary\n",
+    "    # (Dense was imported from tensorflow)\n",
+    "    output_layer = Dense(target_vocab_size,\n",
+    "                        kernel_initializer = tf.truncated_normal_initializer(0.0, 0.1))\n",
+    "    \n",
+    "    # Use the decoding_layer_train function to get the training logits.\n",
+    "    \n",
+    "    \n",
+    "    with tf.variable_scope(\"decode\") as decoding_scope:\n",
+    "        training_logits = decoding_layer_train(encoder_state, dec_cell, dec_embed_input, \n",
+    "                                               target_sequence_length, max_target_sequence_length, \n",
+    "                                               output_layer, keep_prob)\n",
+    "    \n",
+    "        # Use decoding_layer_infer function to get the inference logits.\n",
+    "        decoding_scope.reuse_variables()\n",
+    "        inference_logits = decoding_layer_infer(encoder_state, dec_cell, dec_embeddings, target_vocab_to_int['<GO>'],\n",
+    "                                                target_vocab_to_int['<EOS>'], max_target_sequence_length,\n",
+    "                                                target_vocab_size, output_layer, batch_size, keep_prob)\n",
+    "    \n",
+    "    \n",
+    "    return training_logits, inference_logits\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -468,9 +675,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def seq2seq_model(input_data, target_data, keep_prob, batch_size,\n",
     "                  source_sequence_length, target_sequence_length,\n",
@@ -496,8 +711,19 @@
     "    :return: Tuple of (Training BasicDecoderOutput, Inference BasicDecoderOutput)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
-    "\n",
+    "    # Encode the input using encoding_layer\n",
+    "    _, encoder_state = encoding_layer(input_data, rnn_size, num_layers, keep_prob,\n",
+    "                                      source_sequence_length, source_vocab_size,\n",
+    "                                      enc_embedding_size)\n",
+    "    \n",
+    "    processed_target_data = process_decoder_input(target_data, target_vocab_to_int, batch_size)\n",
+    "    \n",
+    "    training_logits, inference_logits = decoding_layer(processed_target_data, encoder_state,\n",
+    "                                                       target_sequence_length, max_target_sentence_length, rnn_size,\n",
+    "                                                       num_layers, target_vocab_to_int, target_vocab_size,\n",
+    "                                                       batch_size, keep_prob, dec_embedding_size)\n",
+    "    \n",
+    "    return training_logits, inference_logits\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -526,28 +752,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "epochs = None\n",
+    "epochs = 4\n",
     "# Batch Size\n",
-    "batch_size = None\n",
+    "batch_size = 256\n",
     "# RNN Size\n",
-    "rnn_size = None\n",
+    "rnn_size = 256\n",
     "# Number of Layers\n",
-    "num_layers = None\n",
+    "num_layers = 2\n",
     "# Embedding Size\n",
-    "encoding_embedding_size = None\n",
-    "decoding_embedding_size = None\n",
+    "encoding_embedding_size = 200\n",
+    "decoding_embedding_size = 200\n",
     "# Learning Rate\n",
-    "learning_rate = None\n",
+    "learning_rate = 0.005\n",
     "# Dropout Keep Probability\n",
-    "keep_probability = None\n",
-    "display_step = None"
+    "keep_probability = 0.7\n",
+    "display_step = 32"
    ]
   },
   {
@@ -561,7 +785,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -676,6 +902,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -772,7 +999,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -792,7 +1021,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -822,7 +1053,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def sentence_to_seq(sentence, vocab_to_int):\n",
@@ -853,7 +1086,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "translate_sentence = 'he saw a old yellow truck .'\n",
@@ -920,7 +1155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
